fix(style): several style bugs

--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -616,6 +616,16 @@ ul#toc,#toc li {
       &.muted {
         color: @gray-lighter;
       }
+
+      .btn {
+        padding-left: 0;
+      }
+
+      .icon-github {
+        font-size: 20px;
+        line-height: 1;
+        vertical-align: -4px;
+      }
     }
   }
 
@@ -692,6 +702,15 @@ h1 {
       background: @brand-warning;
       border-color: @brand-warning;
     }
+  }
+}
+
+.changelog-rss {
+  text-decoration: none;
+
+  &:hover,
+  &:focus {
+    text-decoration: none;
   }
 }
 
