--- a/templates/pages/sdk_down.html
+++ b/templates/pages/sdk_down.html
@@ -174,9 +174,9 @@
           <h2>JavaScript SDK</h2>
           <ul class="list-unstyled list-inline">
 
-            <li><a href="https://github.com/leancloud/javascript-sdk" class="btn  "><i class="icon icon-github"></i> JavaScript Core SDK</a></li>
-            <li><a href=" https://github.com/leancloud/js-realtime-sdk" class="btn "><i class="icon icon-github"></i> JavaScript 实时通信 SDK</a></li>
-            <li><a href="https://github.com/leancloud/js-push-sdk" class="btn   "><i class="icon icon-github"></i> JavaScript 推送 SDK</a></li>
+            <li><a href="https://github.com/leancloud/javascript-sdk" class="btn"><i class="icon icon-github"></i> JavaScript Core SDK</a></li>
+            <li><a href=" https://github.com/leancloud/js-realtime-sdk" class="btn"><i class="icon icon-github"></i> JavaScript 实时通信 SDK</a></li>
+            <li><a href="https://github.com/leancloud/js-push-sdk" class="btn"><i class="icon icon-github"></i> JavaScript 推送 SDK</a></li>
 
           </ul>
           <hr>
@@ -293,7 +293,7 @@
   <div class="col-md-12">
 
 
-    <p>我们在 GitHub 上的 repo（<a href="https://gitcafe.com/leancloud" class="">Gitcafe 镜像</a>）：</p>
+    <p>我们在 GitHub 上的 repo（<a href="https://gitcafe.com/leancloud" class="">GitCafe 镜像</a>）：</p>
 
     <ul class="list-unstyled list-inline">
       <li><a href="https://github.com/leancloud/leancloud-sdk" class="btn btn-lg btn-default"><i class="icon icon-github"></i> leancloud/leancloud-sdk</a></li>
@@ -326,7 +326,7 @@
           <h4 class="modal-title" id="modal-ios-changelog-label">iOS Changelog</h4>
         </div>
         <div class="modal-body">
-          <div id="ios-changelog" class="changelog-list"></div>
+          <div id="ios-changelog" class="changelog-list selectable-text"></div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
@@ -343,7 +343,7 @@
           <h4 class="modal-title" id="modal-ios-changelog-label">OS X Changelog</h4>
         </div>
         <div class="modal-body">
-          <div id="osx-changelog" class="changelog-list"></div>
+          <div id="osx-changelog" class="changelog-list selectable-text"></div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
@@ -360,7 +360,7 @@
           <h4 class="modal-title" id="modal-android-changelog-label">Android Changelog</h4>
         </div>
         <div class="modal-body">
-          <div id="android-changelog" class="changelog-list"></div>
+          <div id="android-changelog" class="changelog-list selectable-text"></div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
@@ -377,7 +377,7 @@
           <h4 class="modal-title" id="modal-javascript-changelog-label">JavaScript Changelog</h4>
         </div>
         <div class="modal-body">
-          <div id="js-changelog" class="changelog-list"></div>
+          <div id="js-changelog" class="changelog-list selectable-text"></div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
@@ -393,7 +393,7 @@
           <h4 class="modal-title" id="modal-javascript-changelog-label">JavaScript Chat Changelog</h4>
         </div>
         <div class="modal-body">
-          <div id="jschat-changelog" class="changelog-list"></div>
+          <div id="jschat-changelog" class="changelog-list selectable-text"></div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
@@ -410,7 +410,7 @@
           <h4 class="modal-title" id="modal-unity3d-changelog-label">Unity Changelog</h4>
         </div>
         <div class="modal-body">
-          <div id="unity3d-changelog" class="changelog-list"></div>
+          <div id="unity3d-changelog" class="changelog-list selectable-text"></div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
@@ -427,7 +427,7 @@
           <h4 class="modal-title" id="modal-wp-changelog-label">Windows Phone Changelog</h4>
         </div>
         <div class="modal-body">
-          <div id="wp-changelog" class="changelog-list"></div>
+          <div id="wp-changelog" class="changelog-list selectable-text"></div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
