--- a/custom/less/theme-leancloud.less
+++ b/custom/less/theme-leancloud.less
@@ -216,16 +216,21 @@ input,
 textarea,
 code,
 pre,
+.selectable-text,
+.selectable-text *,
 .callout *,
 .figure,
 .user-name-text {
   user-select: text;
 }
 
+.unselectable-text,
+.unselectable-text *,
 .footer *,
 .nav * {
   user-select: none;
 }
+
 
 //
 // Modals
@@ -1352,12 +1357,12 @@ select.form-control {
       cursor: not-allowed;
       background-color: @gray-lighter;
       box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .1);
+    }
 
-      // Disabled and checked state
-      &:checked ~ .control-indicator,
-      &.checked ~ .control-indicator {
-        background-color: fade(@link-color, 60%);
-      }
+    // Disabled and checked state
+    &:checked ~ .control-indicator,
+    &.checked ~ .control-indicator {
+      background-color: fade(@link-color, 60%);
     }
   }
 }
