start: fix currentApp

--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -33,7 +33,7 @@
 
 
 
-{% if basename!='index' and basename!='sdk_down' and basename !='demo' %}
+{% if basename!='index' and basename!='sdk_down' and basename !='demo' and basename !='start' %}
 <script src="custom/js/lib/contents.js"></script>
 <script src="custom/js/md.js"></script>
 {% endif %}
