--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -86,30 +86,67 @@
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">iOS / OS X</a>
           <ul class="dropdown-menu">
-            <li><a href="ios_os_x_guide.html">iOS / OS X 指南</a></li>
-            <li><a href="ios_statistics.html">iOS 统计 SDK 开发指南</a></li>
-            <li><a href="ios_push_cert.html">iOS 推送证书设置指南</a></li>
-            <li><a href="ios_realtime_v2.html">iOS 实时通信开发指南(v2)</a></li>
+            <li><a href="ios_os_x_guide.html">数据存储开发指南</a></li>
+            <li><a href="ios_realtime_v2.html">实时通信开发指南</a></li>
+            <li><a href="ios_push_cert.html">推送证书设置指南</a></li>
+            <li><a href="ios_statistics.html">移动统计开发指南</a></li>
+            <li><a href="ios_os_x_sms_guide.html">短信验证码使用指南</a></li>
+            <li><a href="ios_os_x_faq.html">FAQ</a></li>
             <li><a href="api/iOS/index.html" target="_blank">iOS SDK API</a></li>
           </ul>
         </li>
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">Android</a>
           <ul class="dropdown-menu">
-            <li><a href="android_guide.html">Android 开发指南</a></li>
-            <li><a href="android_statistics.html">Android 统计 SDK 开发指南</a></li>
-            <li><a href="android_realtime_v2.html">Android 实时通信开发指南(v2)</a></li>
+            <li><a href="android_guide.html">数据存储开发指南</a></li>
+            <li><a href="android_realtime_v2.html">实时通信开发指南</a></li>
+            <li><a href="android_statistics.html">移动统计开发指南</a></li>
+            <li><a href="android_sms_guide.html">短信验证码使用指南</a></li>
+            <li><a href="android_faq.html">FAQ</a></li>
             <li><a href="api/android/doc/index.html" target="_blank">Android SDK API</a></li>
           </ul>
         </li>
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">JavaScript</a>
           <ul class="dropdown-menu">
-            <li><a href="js_guide.html">JavaScript 指南</a></li>
-            <li><a href="js_push.html">JavaScript 推送 SDK</a></li>
-            <li><a href="js_realtime.html">JavaScript 实时通信 SDK</a></li>
+            <li><a href="js_guide.html">数据存储开发指南</a></li>
+            <li><a href="js_realtime.html">实时通信开发指南</a></li>
+            <li><a href="js_push.html">消息推送开发指南</a></li>
+            <li><a href="js_sms_guide.html">短信验证码使用指南</a></li>
             <li><a href="cloud_code_guide.html">云代码指南</a></li>
+            <li><a href="js_faq.html">FAQ</a></li>
             <li><a href="api/javascript/index.html" target="_blank">JavaScript SDK API</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">.NET / Unity3D</a>
+          <ul class="dropdown-menu">
+            <li><a href="dotnet_guide.html">.NET 数据存储开发指南</a></li>
+            <li><a href="unity_guide.html">Unity3D 数据存储开发指南</a></li>
+            <li><a href="dotnet_realtime.html">WP8.0 实时通信开发指南</a></li>
+            <li><a href="unity_statistics.html">Unity3D 统计开发指南</a></li>
+            <li><a href="dotnet_faq.html">FAQ</a></li>
+            <li><a href="api/wp/Help/index.html" target="_blank">.NET SDK API</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">Python</a>
+          <ul class="dropdown-menu">
+            <li><a href="python_guide.html">数据存储开发指南</a></li>
+            <li><a href="python_faq.html">FAQ</a></li>
+            <li><a href="api/python/leancloud.html" target="_blank">Python SDK API</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">REST API</a>
+          <ul class="dropdown-menu">
+            <li><a href="rest_api.html">数据存储 API</a></li>
+            <li><a href="rest_api.html#Push_通知">消息推送 API</a></li>
+            <li><a href="rest_api.html#实时通信_API">实时通信 API</a></li>
+            <li><a href="rest_api.html#统计数据API">数据统计 API</a></li>
+            <li><a href="cql_guide.html">CQL 查询语言详解</a></li>
+            <li><a href="oauth2_provider.html">开放平台接入</a></li>
+            <li><a href="rest_faq.html">FAQ</a></li>
           </ul>
         </li>
         <!-- <li class="dropdown">
@@ -120,23 +157,23 @@
             <li><a href="api/javascript/index.html" target="_blank">JavaScript SDK API</a></li>
           </ul>
         </li> -->
-        <li><a href="sdk_down.html">SDK 下载</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">更多</a>
           <ul class="dropdown-menu">
-            <li><a href="rest_api.html">REST API 详解</a></li>
             <li><a href="cloud_code_guide.html">云代码指南</a></li>
-            <li><a href="push_guide.html">消息推送</a></li>
-            <li><a href="realtime_v2.html">实时通信(v2)</a></li>
+            <li><a href="push_guide.html">消息推送总览</a></li>
+            <li><a href="realtime_v2.html">实时通信总览</a></li>
+            <li><a href="status_system.html">事件流(社交关系组件)使用指南</a></li>
+            <li><a href="app_search_guide.html">应用内搜索使用指南</a></li>
+            <li><a href="bigquery_guide.html">离线数据分析使用指南</a></li>
+            <li><a href="user_groups.html">用户群分析指南</a></li>
             <li><a href="data_security.html">数据和安全</a></li>
-            <li><a href="status_system.html">事件流(社交关系组件)</a></li>
             <li><a href="sns.html">SNS 组件开发</a></li>
             <li><a href="feedback.html">用户反馈组件</a></li>
-            <li><a href="python_guide.html">Python 开发指南</a></li>
             <li class="divider"></li>
-            <li><a href="/docs/">查看所有文档</a></li>
             <li><a href="demo.html">Demo</a></li>
             <li><a href="http://leancloud.sexy">第三方库</a></li>
+            <li><a href="sdk_down.html">SDK 下载</a></li>
           </ul>
         </li>
       </ul>
