--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -2,7 +2,7 @@
 <div class="home-full-width-content">
   <div class="doc-home-title">
     <h1 class="font-logo">LeanCloud Documentation</h1>
-    <h4>LeanCloud 官方开发者文档</h4>
+    <h4>LeanCloud 官方开发者文档 <a href="avoscloud-docs.tar.gz">下载全部</a></h4>
   </div>
   <!-- .doc-home-title -->
 
@@ -27,29 +27,29 @@
 
     <div class="col-sm-3">
       <div class="doc-hero-links">
-        <a href="sdk_down.html" class="doc-quick-start-btn">
-          <i class="icon icon-download"></i>
-          SDK 下载
-        </a>
-      </div>
-    </div>
-    <!-- .col-sm-3 -->
-
-    <div class="col-sm-3">
-      <div class="doc-hero-links">
-        <a href="demo.html" class="doc-quick-start-btn">
-          <i class="icon icon-devices"></i>
-          Demo
-        </a>
-      </div>
-    </div>
-    <!-- .col-sm-3 -->
-
-    <div class="col-sm-3">
-      <div class="doc-hero-links">
-        <a href="avoscloud-docs.tar.gz" class="doc-quick-start-btn">
+        <a href="cloud_code_guide.html" class="doc-quick-start-btn">
           <i class="icon icon-package"></i>
-          离线文档
+          云代码详解
+        </a>
+      </div>
+    </div>
+    <!-- .col-sm-3 -->
+
+    <div class="col-sm-3">
+      <div class="doc-hero-links">
+        <a href="app_search_guide.html" class="doc-quick-start-btn">
+          <i class="icon icon-devices"></i>
+          应用内搜索
+        </a>
+      </div>
+    </div>
+    <!-- .col-sm-3 -->
+
+    <div class="col-sm-3">
+      <div class="doc-hero-links">
+        <a href="status_system.html" class="doc-quick-start-btn">
+          <i class="icon icon-package"></i>
+          事件流系统
         </a>
       </div>
     </div>
@@ -60,13 +60,28 @@
   <div class="row">
     <div class="col-md-4">
       <div class="link-block">
+        <h2>功能和服务概览</h2>
+        <ul>
+          <li><a href="push_guide.html">消息推送开发总览</a></li>
+          <li><a href="realtime_v2.html">实时通信开发总览</a></li>
+          <li><a href="faq.html">常见问题</a></li>
+          <li><a href="tool_tips.html">常见功能提示</a></li>
+        </ul>
+      </div>
+    </div>
+    <!-- .col-md-4 -->
+
+    <div class="col-md-4">
+      <div class="link-block">
         <h2>iOS / OS X SDK</h2>
         <ul>
-          <li><a href="ios_os_x_guide.html">iOS / OS X 指南</a></li>
-          <li><a href="ios_realtime_v2.html">iOS 实时通信指南</a></li>
+          <li><a href="ios_os_x_guide.html">数据存储开发指南</a></li>
+          <li><a href="ios_realtime_v2.html">实时通信开发指南</a></li>
           <li><a href="relation_guide.html">关系建模指南</a></li>
-          <li><a href="ios_statistics.html">iOS 统计 SDK 开发指南</a></li>
+          <li><a href="ios_statistics.html">移动统计开发指南</a></li>
           <li><a href="ios_push_cert.html">iOS 推送证书设置指南</a></li>
+          <li><a href="ios_os_x_sms_guide.html">短信验证码使用指南</a></li>
+          <li><a href="ios_os_x_faq.html">FAQ</a></li>
           <li><a href="api/iOS/index.html" target="_blank">iOS SDK API</a></li>
         </ul>
       </div>
@@ -77,9 +92,11 @@
       <div class="link-block">
         <h2>Android SDK</h2>
         <ul>
-          <li><a href="android_guide.html">Android 开发指南</a></li>
-          <li><a href="android_realtime_v2.html">Android 实时通信指南</a></li>
-          <li><a href="android_statistics.html">Android 统计 SDK 开发指南</a></li>
+          <li><a href="android_guide.html">数据存储开发指南</a></li>
+          <li><a href="android_realtime_v2.html">实时通信开发指南</a></li>
+          <li><a href="android_statistics.html">移动统计开发指南</a></li>
+          <li><a href="android_sms_guide.html">短信验证码使用指南</a></li>
+          <li><a href="android_faq.html">FAQ</a></li>
           <li><a href="api/android/doc/index.html" target="_blank">Android SDK API</a></li>
         </ul>
       </div>
@@ -90,9 +107,11 @@
       <div class="link-block">
         <h2>JavaScript SDK</h2>
         <ul>
-          <li><a href="js_guide.html">JavaScript 指南</a></li>
-          <li><a href="js_push.html">JavaScript 推送 SDK</a></li>
-          <li><a href="js_realtime.html">JavaScript 实时通信 SDK</a></li>
+          <li><a href="js_guide.html">数据存储开发指南</a></li>
+          <li><a href="js_realtime.html">实时通信开发指南</a></li>
+          <li><a href="js_push.html">消息推送开发指南</a></li>
+          <li><a href="js_sms_guide.html">短信验证码使用指南</a></li>
+          <li><a href="js_faq.html">FAQ</a></li>
           <li><a href="api/javascript/index.html" target="_blank">JavaScript SDK API</a></li>
         </ul>
       </div>
@@ -106,87 +125,63 @@
 
     <div class="col-md-4">
       <div class="link-block">
-        <h2>Unity3D / .NET</h2>
+        <h2>.NET / Unity3D</h2>
         <ul>
-          <li><a href="unity_guide.html">Unity3D 指南</a></li>
-          <li><a href="unity_statistics.html">Unity3D 统计 SDK 指南</a></li>
-          <li><a href="dotnet_guide.html">.NET指南</a></li>
-          <li><a href="dotnet_realtime.html">Windows Phone 8.0 实时通信指南</a></li>
+          <li><a href="dotnet_guide.html">.NET 数据存储开发指南</a></li>
+          <li><a href="unity_guide.html">Unity3D 数据存储开发指南</a></li>
+          <li><a href="dotnet_realtime.html">WP8.0 实时通信开发指南</a></li>
+          <li><a href="unity_statistics.html">Unity3D 统计开发指南</a></li>
+          <li><a href="dotnet_faq.html">FAQ</a></li>
           <li><a href="api/wp/Help/index.html">.NET SDK API</a></li>
         </ul>
       </div>
     </div>
-  <!-- .col-md-4 -->
-
-  <div class="col-md-4">
-    <div class="link-block">
-      <h2>Python SDK</h2>
-      <ul>
-        <li><a href="python_guide.html">Python 指南</a></li>
-        <li><a href="api/python/leancloud.html">Python SDK API</a></li>
-
-      </ul>
-    </div>
-  </div>
-  <div class="col-md-4">
-    <div class="link-block">
-      <h2>REST API和开放平台</h2>
-      <ul>
-        <li><a href="rest_api.html">REST API 详解</a></li>
-        <li><a href="error_code.html">错误码详解</a></li>
-        <li><a href="cql_guide.html">CQL 查询语言详解</a></li>
-        <li><a href="oauth2_provider.html">LeanCloud 开放平台接入</a></li>
-      </ul>
-    </div>
-  </div>
-
-
     <!-- .col-md-4 -->
-  </div>
-  <!-- .row -->
-<hr>
-  <div class="row">
+
+    <div class="col-md-4">
+      <div class="link-block">
+        <h2>Python SDK</h2>
+        <ul>
+          <li><a href="python_guide.html">数据存储开发指南</a></li>
+          <li><a href="python_faq.html">FAQ</a></li>
+          <li><a href="api/python/leancloud.html">Python SDK API</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="link-block">
+        <h2>REST API 和开放平台</h2>
+        <ul>
+          <li><a href="rest_api.html">数据存储 API</a></li>
+          <li><a href="rest_api.html#Push_通知">消息推送 API</a></li>
+          <li><a href="rest_api.html#实时通信_API">实时通信 API</a></li>
+          <li><a href="rest_api.html#统计数据API">数据统计 API</a></li>
+          <li><a href="error_code.html">错误码详解</a></li>
+          <li><a href="cql_guide.html">CQL 查询语言详解</a></li>
+          <li><a href="oauth2_provider.html">LeanCloud 开放平台接入</a></li>
+        </ul>
+      </div>
+    </div>
     <!-- .col-md-4 -->
+
     <div class="col-md-4">
       <div class="link-block">
         <h2>云代码</h2>
         <ul>
           <li><a href="cloud_code_guide.html">云代码指南</a></li>
           <li><a href="cloud_code_commandline.html">云代码命令行工具</a></li>
+          <li><a href="cloud_code_faq.html">FAQ</a></li>
           <li><a href="js_guide.html">JavaScript 指南</a></li>
         </ul>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="link-block">
-        <h2>消息推送和实时通信</h2>
-        <ul>
-          <li><a href="realtime_v2.html">实时通信开发指南(v2)</a></li>
-          <li><a href="push_guide.html">消息推送开发指南</a></li>
-          <li><a href="ios_push_cert.html">iOS 推送推送证书配置</a></li>
-        </ul>
-      </div>
-    </div>
     <!-- .col-md-4 -->
-
-   <div class="col-md-4">
-     <div class="link-block">
-       <h2>下载和其他</h2>
-       <ul>
-         <li><a href="sdk_down.html">SDK 下载</a></li>
-         <li><a href="demo.html">Demo</a></li>
-         <li><a href="data_security.html">数据和安全</a></li>
-         <li><a href="faq.html">常见问题</a></li>
-         <li><a href="tool_tips.html">常见功能提示</a></li>
-       </ul>
-     </div>
-   </div>
-
-
   </div>
-  <hr>
   <!-- .row -->
+<hr>
   <div class="row">
+
     <div class="col-md-4">
       <div class="link-block">
         <h2>其他组件</h2>
@@ -202,6 +197,19 @@
       </div>
     </div>
 
+   <div class="col-md-4">
+     <div class="link-block">
+       <h2>下载和其他</h2>
+       <ul>
+         <li><a href="sdk_down.html">SDK 下载</a></li>
+         <li><a href="demo.html">Demo</a></li>
+         <li><a href="http://leancloud.sexy">第三方库</a></li>
+       </ul>
+     </div>
+   </div>
+
+
   </div>
+  <hr>
 
 </div>
