change "quick start" to "read guide"

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -19,7 +19,7 @@
       <div class="doc-hero-links">
         <a href="quick-start-guide.html" class="doc-quick-start-btn">
           <i class="icon icon-bulb"></i>
-          快速上手
+          阅读指南
         </a>
       </div>
     </div>
