add dashboard link

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -82,7 +82,7 @@
         <li>
           <a href="/docs/">全部文档</a>
         </li>
-        <li><a href="/start.html">快速入门</a></li>
+        <li><a href="start.html">快速入门</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">iOS / OS X</a>
           <ul class="dropdown-menu">
