--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -204,6 +204,7 @@
          <li><a href="sdk_down.html">SDK 下载</a></li>
          <li><a href="demo.html">Demo</a></li>
          <li><a href="http://leancloud.sexy">第三方库</a></li>
+         <li><a href="dashboard_guide.html">控制台使用指南</a></li>
        </ul>
      </div>
    </div>
