--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -113,7 +113,6 @@
             <li><a href="js_realtime.html">实时通信开发指南</a></li>
             <li><a href="js_push.html">消息推送开发指南</a></li>
             <li><a href="js_sms_guide.html">短信验证码使用指南</a></li>
-            <li><a href="cloud_code_guide.html">云代码指南</a></li>
             <li><a href="js_faq.html">FAQ</a></li>
             <li><a href="api/javascript/index.html" target="_blank">JavaScript SDK API</a></li>
           </ul>
@@ -160,9 +159,6 @@
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">更多</a>
           <ul class="dropdown-menu">
-            <li><a href="cloud_code_guide.html">云代码指南</a></li>
-            <li><a href="push_guide.html">消息推送总览</a></li>
-            <li><a href="realtime_v2.html">实时通信总览</a></li>
             <li><a href="status_system.html">事件流(社交关系组件)使用指南</a></li>
             <li><a href="app_search_guide.html">应用内搜索使用指南</a></li>
             <li><a href="bigquery_guide.html">离线数据分析使用指南</a></li>
@@ -172,7 +168,7 @@
             <li><a href="feedback.html">用户反馈组件</a></li>
             <li class="divider"></li>
             <li><a href="demo.html">Demo</a></li>
-            <li><a href="http://leancloud.sexy">第三方库</a></li>
+            <li><a href="http://leancloud.sexy" target="_blank">第三方库</a></li>
             <li><a href="sdk_down.html">SDK 下载</a></li>
           </ul>
         </li>
