--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -186,13 +186,13 @@
       <div class="link-block">
         <h2>其他组件</h2>
         <ul>
-          <li><a href="sns.html">SNS 组件开发指南</a></li>
-          <li><a href="status_system.html">事件流系统</a></li>
-          <li><a href="feedback.html">用户反馈开发指南</a></li>
+          <li><a href="status_system.html">事件流系统使用指南</a></li>
           <li><a href="app_search_guide.html">应用内搜索和 DeepLink 开发指南</a></li>
           <li><a href="app_data_share.html">应用之间数据共享(Class 绑定)</a></li>
           <li><a href="user_groups.html">用户群分析指南</a></li>
           <li><a href="bigquery_guide.html">离线数据分析使用指南</a></li>
+          <li><a href="sns.html">SNS 组件开发指南</a></li>
+          <li><a href="feedback.html">用户反馈开发指南</a></li>
         </ul>
       </div>
     </div>
