--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -19,7 +19,7 @@
       <div class="doc-hero-links">
         <a href="quick-start-guide.html" class="doc-quick-start-btn">
           <i class="icon icon-bulb"></i>
-          阅读指南
+          文档阅读指南
         </a>
       </div>
     </div>
@@ -27,9 +27,9 @@
 
     <div class="col-sm-3">
       <div class="doc-hero-links">
-        <a href="cloud_code_guide.html" class="doc-quick-start-btn">
+        <a href="start.html" class="doc-quick-start-btn">
           <i class="icon icon-package"></i>
-          云代码详解
+          快速入门
         </a>
       </div>
     </div>
@@ -37,9 +37,9 @@
 
     <div class="col-sm-3">
       <div class="doc-hero-links">
-        <a href="app_search_guide.html" class="doc-quick-start-btn">
+        <a href="demo.html" class="doc-quick-start-btn">
           <i class="icon icon-devices"></i>
-          应用内搜索
+          Demo
         </a>
       </div>
     </div>
@@ -47,9 +47,9 @@
 
     <div class="col-sm-3">
       <div class="doc-hero-links">
-        <a href="status_system.html" class="doc-quick-start-btn">
-          <i class="icon icon-package"></i>
-          事件流系统
+        <a href="sdk_down.html" class="doc-quick-start-btn">
+          <i class="icon icon-download"></i>
+          SDK 下载
         </a>
       </div>
     </div>
@@ -64,6 +64,7 @@
         <ul>
           <li><a href="push_guide.html">消息推送开发总览</a></li>
           <li><a href="realtime_v2.html">实时通信开发总览</a></li>
+          <li><a href="dashboard_guide.html">控制台使用指南</a></li>
           <li><a href="faq.html">常见问题</a></li>
           <li><a href="tool_tips.html">常见功能提示</a></li>
         </ul>
@@ -204,7 +205,7 @@
          <li><a href="sdk_down.html">SDK 下载</a></li>
          <li><a href="demo.html">Demo</a></li>
          <li><a href="http://leancloud.sexy">第三方库</a></li>
-         <li><a href="dashboard_guide.html">控制台使用指南</a></li>
+
        </ul>
      </div>
    </div>
