--- a/templates/pages/start.html
+++ b/templates/pages/start.html
@@ -91,13 +91,13 @@ title: 快速入门 - LeanCloud
     </div>
   </div>
 
-  <div id="step4" class="step ">
+  <!-- <div id="step4" class="step ">
     <h3>相关文档和 Demo</h3>
 
     <div class="step-content">
       <a class="btn btn-default" href="{{links[selectedPlat].doc}}">详细开发指南</a>
       <a class="btn btn-default" href="{{links[selectedPlat].demo}}">Demo 下载</a>
     </div>
-  </div>
+  </div> -->
 
 </div>
