start:未登录时，隐藏选择应用

--- a/templates/pages/start.html
+++ b/templates/pages/start.html
@@ -62,7 +62,7 @@ title: 快速入门 - LeanCloud
     </div>
   </div>
 
-  <div class="step">
+  <div class="step" ng-show="user.username">
     <h3>选择 LeanCloud 应用</h3>
 
     <div class="row">
@@ -84,7 +84,7 @@ title: 快速入门 - LeanCloud
   </div>
 
   <div class="step">
-    <h3>使用 SDK 创建数据</h3>
+    <h3>入门引导</h3>
 
     <div class="step-content" ng-include="'start/'+selectedPlat+'_start.html'" onload="docloaded()">
 
