index: target _blank

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -204,7 +204,7 @@
        <ul>
          <li><a href="sdk_down.html">SDK 下载</a></li>
          <li><a href="demo.html">Demo</a></li>
-         <li><a href="http://leancloud.sexy">第三方库</a></li>
+         <li><a href="http://leancloud.sexy" target="_blank">第三方库</a></li>
 
        </ul>
      </div>
