--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -9,10 +9,10 @@
 
             <div class="navbar-app-actions-wrap">
                 <ul class="nav navbar-nav navbar-app-actions" >
-                  <li class="dropdown dropdown-toggle-app-name" ng-show="user.username">
-                    <a href="/applist.html">
+                  <li class="dropdown dropdown-toggle-app-name" >
+                    <a href="index.html">
                       <i class="icon icon-dashbd-icon icon-blank-app"></i>
-                      <div class="name">返回控制台</div>
+                      <div class="name">文档首页</div>
                     </a>
                   </li>
 
@@ -79,17 +79,27 @@
   <div class="container-fluid">
     <nav class="" role="navigation">
       <ul class="nav navbar-nav">
-        <li>
-          <a href="/docs/">全部文档</a>
-        </li>
+
         <li><a href="start.html">快速入门</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">功能概览</a>
+          <ul class="dropdown-menu">
+            <li><a href="push_guide.html">消息推送开发总览</a></li>
+            <li><a href="realtime_v2.html">实时通信开发总览</a></li>
+            <li><a href="dashboard_guide.html">控制台使用指南</a></li>
+            <li><a href="data_security.html">数据和安全</a></li>
+            <li><a href="faq.html">常见问题</a></li>
+            <li><a href="tool_tips.html">常见功能提示</a></li>
+          </ul>
+        </li>
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">iOS / OS X</a>
           <ul class="dropdown-menu">
             <li><a href="ios_os_x_guide.html">数据存储开发指南</a></li>
             <li><a href="ios_realtime_v2.html">实时通信开发指南</a></li>
-            <li><a href="ios_push_cert.html">推送证书设置指南</a></li>
+            <li><a href="relation_guide.html">关系建模指南</a></li>
             <li><a href="ios_statistics.html">移动统计开发指南</a></li>
+            <li><a href="ios_push_cert.html">iOS 推送证书设置指南</a></li>
             <li><a href="ios_os_x_sms_guide.html">短信验证码使用指南</a></li>
             <li><a href="ios_os_x_faq.html">FAQ</a></li>
             <li><a href="api/iOS/index.html" target="_blank">iOS SDK API</a></li>
@@ -128,6 +138,7 @@
             <li><a href="api/wp/Help/index.html" target="_blank">.NET SDK API</a></li>
           </ul>
         </li>
+
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">Python</a>
           <ul class="dropdown-menu">
@@ -148,28 +159,31 @@
             <li><a href="rest_faq.html">FAQ</a></li>
           </ul>
         </li>
-        <!-- <li class="dropdown">
-          <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">SDK API</a>
+
+        <li class="dropdown">
+          <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">云代码</a>
           <ul class="dropdown-menu">
-            <li><a href="api/iOS/index.html" target="_blank">iOS SDK API</a></li>
-            <li><a href="api/android/doc/index.html" target="_blank">Android SDK API</a></li>
-            <li><a href="api/javascript/index.html" target="_blank">JavaScript SDK API</a></li>
+            <li><a href="cloud_code_guide.html">云代码指南</a></li>
+            <li><a href="cloud_code_commandline.html">云代码命令行工具</a></li>
+            <li><a href="cloud_code_faq.html">FAQ</a></li>
+            <li><a href="js_guide.html">JavaScript 指南</a></li>
           </ul>
-        </li> -->
+        </li>
+
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">更多</a>
           <ul class="dropdown-menu">
-            <li><a href="status_system.html">事件流(社交关系组件)使用指南</a></li>
-            <li><a href="app_search_guide.html">应用内搜索使用指南</a></li>
-            <li><a href="bigquery_guide.html">离线数据分析使用指南</a></li>
+            <li><a href="status_system.html">事件流系统使用指南</a></li>
+            <li><a href="app_search_guide.html">应用内搜索和 DeepLink 开发指南</a></li>
+            <li><a href="app_data_share.html">应用之间数据共享(Class 绑定)</a></li>
             <li><a href="user_groups.html">用户群分析指南</a></li>
-            <li><a href="data_security.html">数据和安全</a></li>
-            <li><a href="sns.html">SNS 组件开发</a></li>
-            <li><a href="feedback.html">用户反馈组件</a></li>
+            <li><a href="bigquery_guide.html">离线数据分析使用指南</a></li>
+            <li><a href="sns.html">SNS 组件开发指南</a></li>
+            <li><a href="feedback.html">用户反馈开发指南</a></li>
             <li class="divider"></li>
-            <li><a href="demo.html">Demo</a></li>
-            <li><a href="http://leancloud.sexy" target="_blank">第三方库</a></li>
             <li><a href="sdk_down.html">SDK 下载</a></li>
+           <li><a href="demo.html">Demo</a></li>
+           <li><a href="http://leancloud.sexy" target="_blank">第三方库</a></li>
           </ul>
         </li>
       </ul>
