update nav bar and index html for WP realtime sdks v2.

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -131,7 +131,7 @@
         <ul>
           <li><a href="dotnet_guide.html">.NET 数据存储开发指南</a></li>
           <li><a href="unity_guide.html">Unity3D 数据存储开发指南</a></li>
-          <li><a href="dotnet_realtime.html">WP8.0 实时通信开发指南</a></li>
+          <li><a href="wp_realtime_v2.html">WP8.0 实时通信开发指南</a></li>
           <li><a href="unity_statistics.html">Unity3D 统计开发指南</a></li>
           <li><a href="dotnet_faq.html">FAQ</a></li>
           <li><a href="api/wp/Help/index.html">.NET SDK API</a></li>
