--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -132,7 +132,7 @@
           <ul class="dropdown-menu">
             <li><a href="dotnet_guide.html">.NET 数据存储开发指南</a></li>
             <li><a href="unity_guide.html">Unity3D 数据存储开发指南</a></li>
-            <li><a href="dotnet_realtime.html">WP8.0 实时通信开发指南</a></li>
+            <li><a href="wp_realtime_v2.html">WP8.0 实时通信开发指南</a></li>
             <li><a href="unity_statistics.html">Unity3D 统计开发指南</a></li>
             <li><a href="dotnet_faq.html">FAQ</a></li>
             <li><a href="api/wp/Help/index.html" target="_blank">.NET SDK API</a></li>
