split push guide

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -78,10 +78,11 @@
         <h2>iOS / OS X SDK</h2>
         <ul>
           <li><a href="ios_os_x_guide.html">数据存储开发指南</a></li>
+          <li><a href="ios_push_guide.html">消息推送开发指南</a></li>
+          <li><a href="ios_push_cert.html">iOS 推送证书设置指南</a></li>
           <li><a href="ios_realtime_v2.html">实时通信开发指南</a></li>
           <li><a href="relation_guide.html">关系建模指南</a></li>
           <li><a href="ios_statistics.html">移动统计开发指南</a></li>
-          <li><a href="ios_push_cert.html">iOS 推送证书设置指南</a></li>
           <li><a href="ios_os_x_sms_guide.html">短信验证码使用指南</a></li>
           <li><a href="ios_os_x_faq.html">FAQ</a></li>
           <li><a href="api/iOS/index.html" target="_blank">iOS SDK API</a></li>
@@ -95,6 +96,7 @@
         <h2>Android SDK</h2>
         <ul>
           <li><a href="android_guide.html">数据存储开发指南</a></li>
+          <li><a href="android_push_guide.html">消息推送开发指南</a></li>
           <li><a href="android_realtime_v2.html">实时通信开发指南</a></li>
           <li><a href="android_statistics.html">移动统计开发指南</a></li>
           <li><a href="android_sms_guide.html">短信验证码使用指南</a></li>
@@ -110,8 +112,8 @@
         <h2>JavaScript SDK</h2>
         <ul>
           <li><a href="js_guide.html">数据存储开发指南</a></li>
-          <li><a href="js_realtime.html">实时通信开发指南</a></li>
           <li><a href="js_push.html">消息推送开发指南</a></li>
+          <li><a href="js_realtime.html">实时通信开发指南</a></li>
           <li><a href="js_sms_guide.html">短信验证码使用指南</a></li>
           <li><a href="js_faq.html">FAQ</a></li>
           <li><a href="api/javascript/index.html" target="_blank">JavaScript SDK API</a></li>
@@ -131,6 +133,7 @@
         <ul>
           <li><a href="dotnet_guide.html">.NET 数据存储开发指南</a></li>
           <li><a href="unity_guide.html">Unity3D 数据存储开发指南</a></li>
+          <li><a href="dotnet_push_guide.html">WP8.0 消息推送开发指南</a></li>
           <li><a href="wp_realtime_v2.html">WP8.0 实时通信开发指南</a></li>
           <li><a href="unity_statistics.html">Unity3D 统计开发指南</a></li>
           <li><a href="dotnet_faq.html">FAQ</a></li>
