--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -134,7 +134,7 @@
           <ul class="dropdown-menu">
             <li><a href="dotnet_guide.html">.NET 数据存储开发指南</a></li>
             <li><a href="unity_guide.html">Unity3D 数据存储开发指南</a></li>
-            <li><a href="dotnet_push_guide.html">WP8.0 消息推送开发总览</a></li>
+            <li><a href="dotnet_push_guide.html">WP8.0 消息推送开发指南</a></li>
             <li><a href="wp_realtime_v2.html">WP8.0 实时通信开发指南</a></li>
             <li><a href="unity_statistics.html">Unity3D 统计开发指南</a></li>
             <li><a href="dotnet_faq.html">FAQ</a></li>
