--- a/templates/pages/start.html
+++ b/templates/pages/start.html
@@ -2,7 +2,7 @@
 layout: download.swig
 title: 快速入门 - LeanCloud
 ---
-<div class="container-fluid start-page" ng-controller="StartCtrl" >
+<div class="start-page" ng-controller="StartCtrl" >
 
   <div class="step">
     <h3>选择开发平台</h3>
