--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -84,8 +84,9 @@
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">功能概览</a>
           <ul class="dropdown-menu">
-            <li><a href="push_guide.html">消息推送开发总览</a></li>
-            <li><a href="realtime_v2.html">实时通信开发总览</a></li>
+            <li><a href="storage_overview.html">数据存储服务总览</a></li>
+            <li><a href="push_guide.html">消息推送服务总览</a></li>
+            <li><a href="realtime_v2.html">实时通信服务总览</a></li>
             <li><a href="dashboard_guide.html">控制台使用指南</a></li>
             <li><a href="data_security.html">数据和安全</a></li>
             <li><a href="faq.html">常见问题</a></li>
