--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -137,7 +137,7 @@
           <li><a href="wp_realtime_v2.html">WP8.0 实时通信开发指南</a></li>
           <li><a href="unity_statistics.html">Unity3D 统计开发指南</a></li>
           <li><a href="dotnet_faq.html">FAQ</a></li>
-          <li><a href="api/wp/Help/index.html">.NET SDK API</a></li>
+          <li><a href="api/dontet/Help/index.html">.NET SDK API</a></li>
         </ul>
       </div>
     </div>
