quick start:create App

--- a/templates/pages/start.html
+++ b/templates/pages/start.html
@@ -76,7 +76,7 @@ title: 快速入门 - LeanCloud
           <div class="form-group">
             <input class="form-control" type="text" ng-model="appname" placeholder="应用名称">
           </div>
-          <a ng-click="createApp()" class="btn  btn-primary create-app ng-scope" translate="ACTION_CREATE_APP">创建应用</a>
+          <a ng-href="/applist.html#/newapp" class="btn  btn-primary create-app ng-scope" translate="ACTION_CREATE_APP">创建应用</a>
           <p  class="help-block" style="">您目前还没有创建任何应用，需要先创建应用</p>
         </form>
       </div>
