fix start create app

--- a/templates/pages/start.html
+++ b/templates/pages/start.html
@@ -73,9 +73,9 @@ title: 快速入门 - LeanCloud
 
       <div class="step-content col-sm-4" ng-hide="apps">
         <form ng-hide="apps.all" class="form-inline">
-          <div class="form-group">
+          <!-- <div class="form-group">
             <input class="form-control" type="text" ng-model="appname" placeholder="应用名称">
-          </div>
+          </div> -->
           <a ng-href="/applist.html#/newapp" class="btn  btn-primary create-app ng-scope" translate="ACTION_CREATE_APP">创建应用</a>
           <p  class="help-block" style="">您目前还没有创建任何应用，需要先创建应用</p>
         </form>
