Add Crash Reporting document entry.

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -103,6 +103,7 @@
             <li><a href="relation_guide.html">关系建模指南</a></li>
             <li><a href="ios_statistics.html">移动统计开发指南</a></li>
             <li><a href="ios_os_x_sms_guide.html">短信验证码使用指南</a></li>
+            <li><a href="ios_crashreporting_guide.html">崩溃报告使用指南</a></li>
             <li><a href="ios_os_x_faq.html">FAQ</a></li>
             <li><a href="api/iOS/index.html" target="_blank">iOS SDK API</a></li>
           </ul>
