--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -162,7 +162,7 @@
         <ul>
           <li><a href="rest_api.html">数据存储 API</a></li>
           <li><a href="rest_api.html#Push_通知">消息推送 API</a></li>
-          <li><a href="rest_api.html#实时通信_API">实时通信 API</a></li>
+          <li><a href="realtime_rest_api.html">实时通信 API</a></li>
           <li><a href="rest_api.html#统计数据API">数据统计 API</a></li>
           <li><a href="error_code.html">错误码详解</a></li>
           <li><a href="cql_guide.html">CQL 查询语言详解</a></li>
