demo page redirect to https://github.com/leancloud/leancloud-demos

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -37,7 +37,7 @@
 
     <div class="col-sm-3">
       <div class="doc-hero-links">
-        <a href="demo.html" class="doc-quick-start-btn">
+        <a target="_blank" href="https://github.com/leancloud/leancloud-demos" class="doc-quick-start-btn">
           <i class="icon icon-devices"></i>
           Demo
         </a>
