--- a/templates/pages/start.html
+++ b/templates/pages/start.html
@@ -86,7 +86,10 @@ title: 快速入门 - LeanCloud
   <div class="step">
     <h3>入门引导</h3>
 
-    <div class="step-content" ng-include="'start/'+selectedPlat+'_start.html'" onload="docloaded()">
+    <!-- <div class="step-content" ng-include="'start/'+selectedPlat+'_start.html'" onload="docloaded()" id="start-main">
+
+    </div> -->
+    <div class="step-content"  id="start-main">
 
     </div>
   </div>
