--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -430,7 +430,7 @@ git push -u origin master
 
 ![image](../images/cloud_code_4.png)
 
-并添加deploy key到你的github项目（deploy key是我们Cloud code机器的ssh public key），如果你是私有项目，需要设置deploy key，
+并添加deploy key到你的github项目（deploy key是我们 LeanEngine 机器的ssh public key），如果你是私有项目，需要设置deploy key，
 
 拷贝 `设置` 菜单里的 `Deploy key` 保存到 github setting 里的deploy key，创建新的一项avoscloud:
 
@@ -561,7 +561,7 @@ Web Hosting的动态请求超时也被限定为15秒。
 很多时候，除了运行在移动设备的 App 之外，您通常也会为 App 架设一个网站，可能只是简单地展现 App 的信息并提供 AppStore 或者 Play 商店下载链接，或者展示当前热门的用户等等。您也可能建设一个后台管理系统，用来管理用户或者业务数据。
 这一切都需要您去创建一个web应用，并且从 VPS 厂商那里购买一个虚拟主机来运行 web 应用，您可能还需要去购买一个域名。
 
-不过现在，Cloud code 为您提供了 web hosting 功能，可以让你设置一个 App 的二级域名 `xxx.avosapps.com`（美国区为 `xxx.avosapps.us` ），并部署您的 web 应用到该域名之下运行。同时支持静态资源和动态请求服务。
+不过现在，LeanEngine 为您提供了 web hosting 功能，可以让你设置一个 App 的二级域名 `xxx.avosapps.com`（美国区为 `xxx.avosapps.us` ），并部署您的 web 应用到该域名之下运行。同时支持静态资源和动态请求服务。
 
 ### 设置域名
 
