--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -105,10 +105,10 @@ LeanEngine 上有一些平台相关的环境变量，可以在你的代码中使
 
 当你开发移动端应用时，可能会有下列需求：
 
-* 应用有 Android、iOS 甚至 WindowsPhone 客户端，但是很多业务逻辑都是一样的，你希望能将这部分逻辑抽取出来，只维护一份。
+* 应用有 Android、iOS 甚至 Windows Phone 客户端，但是很多业务逻辑都是一样的，你希望能将这部分逻辑抽取出来，只维护一份。
 * 有些逻辑希望能够较灵活的调整（比如某些个性化列表的排序规则），但又不想频繁的更新和发布移动客户端。
 * 有些逻辑需要的数据量很大，或者运算成本高（比如某些统计汇总需求），你不希望在移动客户端进行运算，因为这样会消耗大量的网络流量和手机运算能力。
-* 你希望能在特定操作时触发一段逻辑（我们成为 Hook 函数），比如：用户注册后对该用户增加一些信息记录用于统计；或某业务数据发生变化后希望做一些别的业务操作。这些代码不适合放在移动客户端（比如因为上面提到的几个原因）。
+* 你希望能在特定操作时触发一段逻辑（我们称为 Hook 函数），比如：用户注册后对该用户增加一些信息记录用于统计；或某业务数据发生变化后希望做一些别的业务操作。这些代码不适合放在移动客户端（比如因为上面提到的几个原因）。
 * 你希望有能有定时任务，比如每天凌晨清理垃圾注册账号等等。
 
 这时，你可以使用 LeanEngine 的 Cloud 函数。Cloud 函数是一段部署在服务端的代码，编写 JavaScript 或者 Python 代码，并部署到我们的平台上，可以很好的完成上述需求。
@@ -125,7 +125,7 @@ LeanEngine 上有一些平台相关的环境变量，可以在你的代码中使
 }
 ```
 
-`stars`表示评分，1-5。如果你想查找《黑客帝国》这部电影的平均分，你可以找出这部电影的所有评分，并在设备上根据这个查询结果计算平均分。但是这样一来，尽管你只是需要平均分这样一个数字，却不得不耗费大量的带宽来传输所有的评分。通过Cloud Code，我们可以简单地传入电影名称，然后返回电影的平均分。
+`stars`表示评分，1-5。如果你想查找《黑客帝国》这部电影的平均分，你可以找出这部电影的所有评分，并在设备上根据这个查询结果计算平均分。但是这样一来，尽管你只是需要平均分这样一个数字，却不得不耗费大量的带宽来传输所有的评分。通过 LeanEngine，我们可以简单地传入电影名称，然后返回电影的平均分。
 
 Cloud 函数接收 JSON 格式的请求对象，我们可以用它来传入电影名称。整个 {% block sdk_guide_link %}{% endblock %} 都在 LeanEngine 运行环境上有效，可以直接使用，所以我们可以使用它来查询所有的评分。结合一起，实现 `averageStars` 函数的代码如下:
 
@@ -237,6 +237,10 @@ API参数详解参见 {% block runFuncApiLink %}{% endblock %}。
 
 客户端收到的响应： `{"code":123,"error":"custom error message"}`
 
+## 发送 HTTP 请求
+
+{% block http_client %}{% endblock %}
+
 ## LeanEngine 管理控制台
 
 首先，请进入App的 [LeanEngine 管理](/cloud.html?appid={{appid}}#/repository) 界面：
@@ -254,7 +258,7 @@ API参数详解参见 {% block runFuncApiLink %}{% endblock %}。
 
 ## 在线定义函数
 
-很多人使用 Cloud Code 是为了在服务端提供一些个性化的方法供各终端调用，而不希望关心诸如代码托管、npm 依赖管理等问题。为此我们提供了在线维护 Cloud Code 的功能。
+很多人使用 LeanEngine 是为了在服务端提供一些个性化的方法供各终端调用，而不希望关心诸如代码托管、npm 依赖管理等问题。为此我们提供了在线维护 Cloud 函数 的功能。
 
 ### 提醒
 
@@ -303,10 +307,10 @@ if (name) {
 }
 ```
 
-**注：如果想要发送 HTTP 请求，请看文档下面「[发送 HTTP 请求](#发送 HTTP 请求)」**
+**注：如果想要发送 HTTP 请求，请看文档下面「[发送 HTTP 请求](#发送_HTTP_请求)」**
 
 
-点击保存后，Cloud Code 会在后台编译、保存，并将代码部署到「测试环境」，这个过程可能需要十几秒钟的时间，请耐心等待。全部完成后，页面上方会提示「已更新到测试环境」；如果有错误（比如编译错误）则会出现类似提示：`加载代码出错: SyntaxError: Unexpected token )`。
+点击保存后，LeanEngine 会在后台编译、保存，并将代码部署到「测试环境」，这个过程可能需要十几秒钟的时间，请耐心等待。全部完成后，页面上方会提示「已更新到测试环境」；如果有错误（比如编译错误）则会出现类似提示：`加载代码出错: SyntaxError: Unexpected token )`。
 
 ### 发布
 
@@ -360,7 +364,7 @@ if (name) {
 
 ### 使用命令行工具部署
 
-使用命令行工具可以非常方便的部署、发布应用，查看应用状态，查看日志，甚至支持多应用部署。具体使用请 [参考文档](https://leancloud.cn/docs/cloud_code_commandline.html)。
+使用命令行工具可以非常方便地部署、发布应用，查看应用状态，查看日志，甚至支持多应用部署。具体使用请 [参考文档](https://leancloud.cn/docs/cloud_code_commandline.html)。
 
 除此之外，还可以使用 git 仓库部署。你需要将项目提交到一个 git 仓库，LeanCloud并不提供源码的版本管理功能，而是借助于git这个优秀的分布式版本管理工具。我们推荐你使用[CSDN Code平台](https://code.csdn.net/)，[github](https://github.com/)或者[BitBucket](https://bitbucket.org/)这样第三方的源码
 托管网站，也可以使用你自己搭建的git仓库(比如使用[gitlab.org](http://gitlab.org/))。下面我们详细描述下怎么使用。
@@ -426,7 +430,7 @@ git remote add origin git@github.com:${yourname}/test.git
 git push -u origin master
 ```
 
-到这一步我们已经将源码成功push到github，接下来到Cloud Code的管理界面填写下你的git地址（请注意，一定要填写以`git@`开头的地址，我们暂不支持https协议clone源码）并点击save按钮保存：
+到这一步我们已经将源码成功push到github，接下来到 LeanEngine 的管理界面填写下你的git地址（请注意，一定要填写以`git@`开头的地址，我们暂不支持https协议clone源码）并点击save按钮保存：
 
 ![image](../images/cloud_code_4.png)
 
@@ -701,7 +705,7 @@ else
 
 ## 第三方平台接入
 
-因为 Cloud Code 提供了 webHosting 功能，这相当于为你在 internet 上提供了一台简单的 VPS（虚拟主机），你可以用它接入第三方平台（很多第三方平台需要你有回调服务器），完成一些特定的工作。
+因为 LeanEngine 提供了 webHosting 功能，这相当于为你在 internet 上提供了一台简单的 VPS（虚拟主机），你可以用它接入第三方平台（很多第三方平台需要你有回调服务器），完成一些特定的工作。
 
 ### 接入支付宝
 
