fixed #313: 关于「Cloud 函数」的锚点错误

--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -280,7 +280,7 @@ API参数详解参见 {% block runFuncApiLink %}{% endblock %}。
 * Hook：对应 `AV.Cloud.beforeSave` 等回调定义的方法。
 * Global：对应全局变量，一些全局变量和公共函数可以定义在这里。
 
-这些函数的使用场景和具体细节，参见 [Cloud 函数](#cloud-函数)
+这些函数的使用场景和具体细节，参见 [Cloud 函数](#Cloud_函数)
 
 ### 创建函数
 
