LeanEngine 增加 Demo 章节

--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -14,7 +14,12 @@
 {% block updateToLeanEngine %}{% endblock %}
 
 ### 命令行工具
+
 使用命令行工具可以非常方便的部署、发布 LeanEngine 项目，查看项目状态，查看日志，甚至支持多应用部署。具体使用请 [参考文档](https://leancloud.cn/docs/cloud_code_commandline.html)。
+
+## Demo
+
+{% block demo %}{% endblock %}
 
 ## 快速入门
 
