--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -174,10 +174,12 @@
 
     <div class="col-md-3">
       <div class="link-block">
-        <h2>云代码</h2>
+        <h2>云引擎（云代码）</h2>
         <ul>
-          <li><a href="cloud_code_guide.html">云代码指南</a></li>
-          <li><a href="cloud_code_commandline.html">云代码命令行工具</a></li>
+          <li><a href="leanengine_guide-node.html">云引擎（Node.js 环境）</a></li>
+          <li><a href="leanengine_guide-python.html">云引擎（Python 环境）</a></li>
+          <li><a href="leanengine_guide-cloudcode.html">云引擎（云代码 2.0 环境）</a></li>
+          <li><a href="cloud_code_commandline.html">云引擎命令行工具</a></li>
           <li><a href="cloud_code_faq.html">FAQ</a></li>
           <li><a href="js_guide.html">JavaScript 指南</a></li>
         </ul>
