--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -82,7 +82,7 @@
 
         <li><a href="start.html">快速入门</a></li>
         <li class="dropdown">
-          <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">功能概览</a>
+          <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">功能概览</a>
           <ul class="dropdown-menu">
             <li><a href="storage_overview.html">数据存储服务总览</a></li>
             <li><a href="push_guide.html">消息推送服务总览</a></li>
@@ -94,7 +94,7 @@
           </ul>
         </li>
         <li class="dropdown">
-          <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">iOS / OS X</a>
+          <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">iOS / OS X</a>
           <ul class="dropdown-menu">
             <li><a href="ios_os_x_guide.html">数据存储开发指南</a></li>
             <li><a href="ios_push_guide.html">消息推送开发指南</a></li>
@@ -109,7 +109,7 @@
           </ul>
         </li>
         <li class="dropdown">
-          <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">Android</a>
+          <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">Android</a>
           <ul class="dropdown-menu">
             <li><a href="android_guide.html">数据存储开发指南</a></li>
             <li><a href="android_push_guide.html">消息推送开发指南</a></li>
@@ -121,7 +121,7 @@
           </ul>
         </li>
         <li class="dropdown">
-          <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">JavaScript</a>
+          <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">JavaScript</a>
           <ul class="dropdown-menu">
             <li><a href="js_guide.html">数据存储开发指南</a></li>
             <li><a href="js_push.html">消息推送开发指南</a></li>
@@ -132,7 +132,7 @@
           </ul>
         </li>
         <li class="dropdown">
-          <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">.NET / Unity3D</a>
+          <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">.NET / Unity3D</a>
           <ul class="dropdown-menu">
             <li><a href="dotnet_guide.html">.NET 数据存储开发指南</a></li>
             <li><a href="unity_guide.html">Unity3D 数据存储开发指南</a></li>
@@ -145,7 +145,7 @@
         </li>
 
         <li class="dropdown">
-          <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">Python</a>
+          <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">Python</a>
           <ul class="dropdown-menu">
             <li><a href="python_guide.html">数据存储开发指南</a></li>
             <li><a href="python_faq.html">FAQ</a></li>
@@ -153,7 +153,7 @@
           </ul>
         </li>
         <li class="dropdown">
-          <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">REST API</a>
+          <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">REST API</a>
           <ul class="dropdown-menu">
             <li><a href="rest_api.html">数据存储 API</a></li>
             <li><a href="rest_api.html#Push_通知">消息推送 API</a></li>
@@ -166,7 +166,7 @@
         </li>
 
         <li class="dropdown">
-          <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">云代码</a>
+          <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">云代码</a>
           <ul class="dropdown-menu">
             <li><a href="cloud_code_guide.html">云代码指南</a></li>
             <li><a href="cloud_code_commandline.html">云代码命令行工具</a></li>
@@ -176,11 +176,11 @@
         </li>
 
         <li class="dropdown">
-          <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">更多</a>
+          <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">更多</a>
           <ul class="dropdown-menu">
             <li><a href="status_system.html">事件流系统使用指南</a></li>
             <li><a href="app_search_guide.html">应用内搜索和 DeepLink 开发指南</a></li>
-            <li><a href="app_data_share.html">应用之间数据共享(Class 绑定)</a></li>
+            <li><a href="app_data_share.html">应用之间数据共享（Class 绑定）</a></li>
             <li><a href="user_groups.html">用户群分析指南</a></li>
             <li><a href="bigquery_guide.html">离线数据分析使用指南</a></li>
             <li><a href="sns.html">SNS 组件开发指南</a></li>
