--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -2,7 +2,7 @@
 <div class="home-full-width-content">
   <div class="doc-home-title">
     <h1 class="font-logo">LeanCloud Documentation</h1>
-    <h4>LeanCloud 官方开发者文档 <a href="avoscloud-docs.tar.gz">下载全部</a></h4>
+    <h4>LeanCloud 官方开发者文档 <a href="avoscloud-docs.tar.gz">离线下载</a></h4>
   </div>
   <!-- .doc-home-title -->
 
@@ -197,7 +197,7 @@
         <ul>
           <li><a href="status_system.html">事件流系统使用指南</a></li>
           <li><a href="app_search_guide.html">应用内搜索和 DeepLink 开发指南</a></li>
-          <li><a href="app_data_share.html">应用之间数据共享(Class 绑定)</a></li>
+          <li><a href="app_data_share.html">应用之间数据共享（Class 绑定）</a></li>
           <li><a href="user_groups.html">用户群分析指南</a></li>
           <li><a href="bigquery_guide.html">离线数据分析使用指南</a></li>
           <li><a href="sns.html">SNS 组件开发指南</a></li>
