修改文档首页 LeanEngine 连接的名字

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -178,7 +178,7 @@
         <ul>
           <li><a href="leanengine_guide-node.html">云引擎（Node.js 环境）</a></li>
           <li><a href="leanengine_guide-python.html">云引擎（Python 环境）</a></li>
-          <li><a href="leanengine_guide-cloudcode.html">云引擎（云代码 2.0 环境）</a></li>
+          <li><a href="leanengine_guide-cloudcode.html">云引擎（旧版云代码环境）</a></li>
           <li><a href="cloud_code_commandline.html">云引擎命令行工具</a></li>
           <li><a href="cloud_code_faq.html">FAQ</a></li>
           <li><a href="js_guide.html">JavaScript 指南</a></li>
