--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -84,7 +84,7 @@
           <li><a href="ios_realtime_v2.html">实时通信开发指南</a></li>
           <li><a href="relation_guide.html">关系建模指南</a></li>
           <li><a href="ios_statistics.html">移动统计开发指南</a></li>
-          <li><a href="ios_os_x_sms_guide.html">短信验证码使用指南</a></li>
+          <li><a href="ios_os_x_sms_guide.html">短信验证使用指南</a></li>
           <li><a href="ios_crashreporting_guide.html">崩溃报告使用指南</a></li>
           <li><a href="ios_os_x_faq.html">FAQ</a></li>
           <li><a href="api/iOS/index.html" target="_blank">iOS SDK API</a></li>
@@ -101,7 +101,7 @@
           <li><a href="android_push_guide.html">消息推送开发指南</a></li>
           <li><a href="android_realtime_v2.html">实时通信开发指南</a></li>
           <li><a href="android_statistics.html">移动统计开发指南</a></li>
-          <li><a href="android_sms_guide.html">短信验证码使用指南</a></li>
+          <li><a href="android_sms_guide.html">短信验证使用指南</a></li>
           <li><a href="android_faq.html">FAQ</a></li>
           <li><a href="api/android/doc/index.html" target="_blank">Android SDK API</a></li>
         </ul>
@@ -116,7 +116,8 @@
           <li><a href="js_guide.html">数据存储开发指南</a></li>
           <li><a href="js_push.html">消息推送开发指南</a></li>
           <li><a href="js_realtime.html">实时通信开发指南</a></li>
-          <li><a href="js_sms_guide.html">短信验证码使用指南</a></li>
+          <li><a href="js_sms_guide.html">短信验证使用指南</a></li>
+          <li><a href="js_analytics.html">分析统计开发指南</a></li>
           <li><a href="js_faq.html">FAQ</a></li>
           <li><a href="api/javascript/index.html" target="_blank">JavaScript SDK API</a></li>
         </ul>
