comment not work

--- a/templates/include/head.html
+++ b/templates/include/head.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimal-ui">
 
 <title>LeanCloud 文档</title>
-
+<script src="//cdn1.lncld.net/static/js/av-mini-0.5.4.js"></script>
 <!-- build:js custom/js/docs-all.js -->
 <script src="custom/js/lib/jquery.min.js"></script>
 <script src="custom/js/lib/bootstrap.min.js"></script>
@@ -20,6 +20,8 @@
 <script src="custom/js/app.js"></script>
 <script src="custom/js/common.js"></script>
 <script src="custom/js/demo.js"></script>
+<script src="custom/js/comment.js"></script>
 <!-- endbuild -->
+
 
 <link rel="stylesheet" type="text/css" href="custom/css/app-docs.css">
